Migrate visual effects to a render-driven Accessory system